--- a/lib/sk-highlight/assets/scss/sk-highlight.scss
+++ b/lib/sk-highlight/assets/scss/sk-highlight.scss
@@ -1,7 +1,7 @@
 .highlight-badge {
     display: inline-block;
-    padding: .5em;
-    font-size: 10px;
+    padding: .25em .5em;
+    font-size: 12px;
     font-weight: bold;
     line-height: 1;
     text-align: center;
@@ -23,10 +23,17 @@
 
   }
 
+  .tt-suggestion{
+    .highlight-badge{
+      top: .5em;
+      
+    }    
+  }
+
   .search-module__items{
     .highlight-badge{
         top: .5em;
-        right: 4em;
+        right: 3em;
     }
   }
 
