fix for badge placement on start page.

--- a/lib/sk-highlight/assets/scss/sk-highlight.scss
+++ b/lib/sk-highlight/assets/scss/sk-highlight.scss
@@ -47,7 +47,19 @@
     }
   }
 
+  .archive-post {
+    .media-heading{
+      position: relative;
+      .highlight-badge{
+        position: relative;
+        right: 0;
+      }
+    }
+  }
+
   // override parent theme
   .search-module__item__container{
     position: relative;
   }
+
+  
