removed negative margin on top

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5699,7 +5699,8 @@ h1, h2, h3, h4, h5, h6,
   position: relative; }
   .archive-post .media-heading .highlight-badge {
     position: relative;
-    right: 0; }
+    right: 0;
+    top: 0; }
 
 .search-module__item__container {
   position: relative; }
