--- a/assets/css/scss/overrides/_openinghours.scss
+++ b/assets/css/scss/overrides/_openinghours.scss
@@ -1,5 +1,10 @@
 .opening-hours-wrapper {
   background: #52a65a !important;
+
+  @include media-breakpoint-down(sm) {
+    margin-bottom: 5px;
+  }
+
 }
 
 .opening-hours-wrapper .list-group {
