--- a/assets/css/scss/partials/_blocks.scss
+++ b/assets/css/scss/partials/_blocks.scss
@@ -140,7 +140,14 @@
         }
 
       }
+
+
     }
+
+
+    
+
+
 
 
     .block-footer {
@@ -255,9 +262,21 @@
       }
     }
 
-
-
-
+    .block-block__media {
+      position: relative;
+      padding-bottom: 56.25%; /* 16:9 */
+      padding-top: 25px;
+      height: 0;
+      
+        iframe {
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+        }
+    }
+    
   }
 }
 
