lib for cookie informer

--- a/assets/css/scss/style.scss
+++ b/assets/css/scss/style.scss
@@ -31,6 +31,8 @@
 
 @import 'pages/wasteguide_search';
 
+@import 'components/sk-cookie-informer';
+
 
 @import '../../../lib/sk-info-banner/assets/scss/info-banner';
 @import '../../../lib/sk-highlight/assets/scss/sk-highlight';
